# fishpw

./: Cargo.toml  README.md
doc/: before-coding.md  design.md  mvp.md  project-tree.md
src/: main.rs  mod.rs  passwd.rs
src/datastore/: store.rs
src/encrypt/: util.rs
