[package]
name = "fishpw"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
rand = "0.9.2"
serde_json = "1.0.142"
uuid = { version = "1.9", features = ["v4"] }
